About-us scroll-top problem and horizontal scrollba FIX

--- a/master.css
+++ b/master.css
@@ -392,6 +392,7 @@ box-shadow: inset 0 0 10px 0 #676666, 0 1px 5px 0 rgba(0, 0, 0, .2);*/ text-shad
 
 	/* Nav responsiveness */
 	@media only screen and (max-width: 1220px) { .about-us #list-of-people { width: 900px; left: 40px; } .about-us #footer { margin-top: 480px; } }
+	@media only screen and (max-width: 1220px) { .about-us #danieltin div,.about-us #oskansavli div,.about-us #suataaldan div { left: -168px; } }
 
 #list-of-people li a:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
 
